--- a/inex.html
+++ b/inex.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Mandy's Recipe Book</h1>
+        <h1>Tuscan Recipe Book</h1>
         <select id="bakeItem" onchange="displayRecipe()">
             <option value="">Lets Get Baked</option>
             <option value="chocolate cake">Chocolate Cake</option>
